--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@udecode/cn": "^44.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
@@ -17,6 +21,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
